Fixed style bug. Line numbers had wrong color.

--- a/dev/java/web/sventon.css
+++ b/dev/java/web/sventon.css
@@ -215,6 +215,8 @@ th {
 }
 
 .sventonLineNo {
+  color: #000000;
+  background-color: inherit;
   text-decoration: none;
   font-style: italic;
   font-weight: bold;
